--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "six-cities",
   "version": "5.0.0",
   "description": "Проект «Шесть городов» от HTML Academy",
+  "type": "module",
   "keywords": [
     "rest",
     "api",
@@ -32,9 +33,6 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "module-alias": "^2.2.3"
-  },
-  "_moduleAliases": {
-    "@": "src"
+    "chalk": "^5.3.0"
   }
 }
