--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "six-cities",
-  "version": "5.0.0",
+  "version": "1.0.0",
   "description": "Проект «Шесть городов» от HTML Academy",
-  "type": "module",
   "keywords": [
     "rest",
     "api",
     "node.js"
   ],
   "main": "main.js",
+  "type": "commonjs",
   "scripts": {
     "start": "npm run build && node ./dist/main.js",
     "build": "npm run clean && npm run compile",
@@ -24,8 +24,10 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "nodemon": "^3.0.1",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
     "typescript": "5.2.2"
   },
@@ -34,6 +36,10 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "4.1.2",
+    "module-alias": "^2.2.3"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
